Deploy Spring Boot with Gradle